# tadf-audit

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  HOWTO_OTSU_RU.docx  HOWTO_OTSU_RU.md  PLAN_DEV_RU.md  PLAN_FATHER_RU.docx  PLAN_FATHER_RU.md  README.md  auth.yaml.example  docker-entrypoint.sh  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: deploy-hetzner.yml
.streamlit/: config.toml
app/: TADF_Ehitus.py  _auth.py  _sidebar.py  _state.py  _style.py  _widgets.py  main.py
app/pages/: 1_📝_Новый_аудит.py  2_🏠_Здание.py  3_🔍_Наблюдения.py  3_🔍_Находки.py  4_📸_Фото.py  5_📄_Готовый_отчёт.py  6_📚_Правовая_база.py  7_🔌_Подключения.py  8_🧠_Корпус.py  9_📋_Справочник.py  9_🗂_Справочник.py
assets/userscripts/: tadf-connector.user.js
ops/: Caddyfile  README.md  docker-compose.prod.yml
ops/hetzner/: bootstrap.sh  cloud-init.yaml
scripts/: ingest_corpus.py  manage_users.py  seed_sample_drafts.py
src/tadf/: __init__.py  config.py  demo.py  feature_flags.py  sections.py
src/tadf/api/: __init__.py  app.py  imports.py  tokens.py
src/tadf/corpus/: parse_asice.py  parse_doc.py  parse_docx.py  parse_pdf.py  preload.py  store.py
src/tadf/db/: lookups.py  orm.py  repo.py  session.py
src/tadf/intake/: document_extract.py  photo_ingest.py
src/tadf/legal/: checklist.py  loader.py  references.yaml
src/tadf/llm/: __init__.py  captioner.py  client.py  corpus_extractor.py  drafter.py  extractor.py  fewshot.py  improve.py  polish.py  ranker.py  usage.py
src/tadf/models/: __init__.py  audit.py  photo.py  (+4 more)
tests/: conftest.py  test_api_endpoints.py  test_api_imports_mappers.py  test_api_tokens.py  test_ariregister_client.py  test_audit_history.py  test_context_header_footer.py  test_corpus_extractor.py  test_corpus_parse.py  test_corpus_parse_doc.py  test_corpus_store.py  test_db_roundtrip.py  test_directory.py  test_ehr_client.py  test_external_cache.py  test_external_links.py  test_extractor.py  test_feature_flags.py  test_fewshot.py  test_inaadress_client.py  test_intake_formats.py  test_legal_checklist.py  test_lookups_autofill.py  test_lookups_blocklist.py  test_lookups_by_name.py  test_manage_users.py  test_preload.py  test_prewarm.py  test_registry_codes.py  test_render.py  test_repo_crud.py
(+10 files in other folders)
